# bomkit

./: CHANGELOG.md  README.md  pyproject.toml
bomkit/: BOM.py  __main__.py  browser.py
doc/src/: conf.py
pybom/: __main__.py  browser.py
tests/: test_bom.py  test_browser.py  test_cli.py
