[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyBOM"
version = "0.2.0"
description = "Bill of materials processing utilities"
authors = [{ name = "Rob Siegwart", email = "rob@robsiegwart.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["bom", "engineering", "manufacturing"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "anytree>=2.12",
    "openpyxl>=3.1",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
pybom = "pybom.__main__:main"

[tool.setuptools]
packages = ["pybom"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
]
